FIX on menu not responsive

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6566,6 +6566,7 @@ footer.main-footer.fixed-footer {
 	opacity:1;
 	right:0;
 	visibility:visible;
+	background-color: #154a64;
 }
 .menusb {
 	display:block;
